# Fossilizid

./: CMakeLists.txt  README.md
chuckledb/: CMakeLists.txt  vfs.cpp  vfs.h
comm-protocols/: CMakeLists.txt  elementinfo.cpp  elementinfo.h  networkcmd.cpp  networkcmd.h  vector.cpp  vector.h
container/: CMakeLists.txt  deque.h  msque.h  optimisticque.h  ringque.h  small_hash_map.h  swapque.h
container/detail/: _hazard_ptr.h  detail.cpp
context/: CMakeLists.txt  context.cpp  context.h
pool/: CMakeLists.txt  factory.cpp  factory.h  mempool.cpp  mempool.h  objpool.cpp  objpool.h
reduce-rpc/: CMakeLists.txt  remote_obj.cpp  remote_obj.h  service.cpp  service.h  session.cpp  session.h
reduce-rpc/interface/: CMakeLists.txt  IInterface.h  ILocaleEndpoint.cpp  ILocaleEndpoint.h  IRemoteEndpoint.cpp  IRemoteEndpoint.h  ITimeCallback.cpp  ITimeCallback.h
reduce-rpc/rpcmake/: clientcodegen.py  deletenonespacelstrip.py  deletenote.py  readme  rpcmake.py  ruletable.py  statemachine.py  syntaxanalysis.py
reduce-rpc/service/: CMakeLists.txt  acceptservice.cpp  acceptservice.h  connectservice.cpp  connectservice.h  locale_obj.cpp  locale_obj.h  obj.cpp  obj.h  protodescription.h  remote_obj.cpp  remote_obj.h  rpcsession.cpp  rpcsession.h  service.cpp  service.h  session.h  tempsession.cpp  tempsession.h  uuid.cpp  (+1 more)
reliably- transmission/: CMakeLists.txt  UDPBase.cpp  UDPBase.h  UDPClient.cpp  UDPClient.h  UDPConnect.cpp  UDPConnect.h  UDPReliableProtocol.h  UDPService.cpp  UDPService.h  UDPSession.cpp  UDPSession.h  enumtype.h  mempool.cpp  mempool.h  networkcmd.cpp  networkcmd.h
remote-queue/: CMakeLists.txt  acceptor.h  channel.h  close.h  detail.cpp  endpoint.h  queue.h  readme.txt  remote_queue.h  typedef.h
remote-queue/windows/: acceptorimpl.cpp  acceptorimpl.h  channelimpl.cpp  channelimpl.h  close.cpp  endpointimpl.cpp  endpointimpl.h  handle.h  overlapped.h  queueimpl.cpp  queueimpl.h  wsainit.cpp  wsainit.h
rpcmake/: rpcinfo.py
test/: CMakeLists.txt
(+7 files in other folders)
